--- a/Templates/dashboard-export.html
+++ b/Templates/dashboard-export.html
@@ -40,40 +40,51 @@
             <div class="text-center"><a class="btn btn-secondary" data-bs-toggle="collapse" aria-expanded="true" aria-controls="collapse-2" href="#collapse-2" role="button" style="margin-bottom: 10px;width: 80%;font-size: 18px;"><i class="fa fa-filter"></i>&nbsp;Filters</a>
                 <div class="collapse show" id="collapse-2">
                     <form>
-                        <div class="row" style="margin-top: 10px;">
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="Residents Name" placeholder="Residents" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
-                                <div class="dropdown">
-                                    <button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Date</button>
+                        <div class="row d-flex justify-content-center" style="margin-top: 10px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="Residents Name" placeholder="Residents" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                                <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Date</button>
                                     <div class="dropdown-menu">
                                         <p style="margin-left: 15px;margin-right: 15px;margin-bottom: 0px;">From:</p><input class="form-control" type="date" style="margin-left: 10px;margin-right: 10px;width: 90%;">
                                         <p style="margin-left: 15px;margin-right: 15px;margin-bottom: 0px;">To:</p><input class="form-control" type="date" style="margin-left: 10px;margin-right: 10px;width: 90%;">
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="Residents Name" placeholder="Reporter" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="Residents Name" placeholder="Reporter" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Location</button>
                                     <div class="dropdown-menu">
-                                        <div class="form-check" style="margin-left: 10px;"><input class="form-check-input" type="checkbox" id="formCheck-8"><label class="form-check-label" for="formCheck-8">Main Floor</label></div>
+                                        {{ reports|location_options }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Type of Care</button>
                                     <div class="dropdown-menu">
-                                        <div class="form-check" style="margin-left: 10px;"><input class="form-check-input" type="checkbox" id="formCheck-9"><label class="form-check-label" for="formCheck-9">Nursing</label></div>
+                                        {{ reports|care_options }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Incident Type</button>
                                     <div class="dropdown-menu">
-                                        <div class="form-check" style="margin-left: 10px;"><input class="form-check-input" type="checkbox" id="formCheck-10"><label class="form-check-label" for="formCheck-10">John Smith</label></div>
+                                        {{ reports|incident_options }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 15px;padding-bottom: 0px;"><a class="btn btn-secondary" role="button" style="width: 50% ;">Apply</a></div>
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                                <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Report Status</button>
+                                    <div class="dropdown-menu">
+                                        <div class="form-check" style="margin-left: 10px;"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">John Smith</label></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                                <div class="d-flex justify-content-center" style="width: 100%;padding: 6px 12px;height: 100%;border-width: 2px;border-style: solid;border-radius: 4px;">
+                                    <div class="form-check" style="text-align: left;"><input class="form-check-input" type="checkbox" id="formCheck-3" style="border: 2px solid rgb(0, 0, 0);padding: 7px;"><label class="form-check-label" for="formCheck-3" style="font-size: 18px;">Display All</label></div>
+                                </div>
+                            </div>
+                            <div class="col-12" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 15px;padding-bottom: 0px;"><a class="btn btn-secondary" role="button" style="width: 50% ;">Apply</a></div>
                         </div>
                     </form>
                 </div>
@@ -136,6 +147,9 @@
                             {% if report.death %}Death, {% endif %}
                             {% if report.other_type_of_incicent %}Other, {% endif %}
                             {% if report.staff_injury %}Staff Injury{% endif %}</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Report Status: {{ report.report_status }}</p>
                         </div>
                     </div>
                 </div>
