--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -39,9 +39,9 @@
             <div class="text-center"><a class="btn btn-secondary" data-bs-toggle="collapse" aria-expanded="true" aria-controls="collapse-2" href="#collapse-2" role="button" style="margin-bottom: 10px;width: 80%;font-size: 18px;"><i class="fa fa-filter"></i>&nbsp;Filters</a>
                 <div class="collapse show" id="collapse-2">
                     <form>
-                        <div class="row" style="margin-top: 10px;">
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="Residents Name" placeholder="Residents" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                        <div class="row d-flex justify-content-center" style="margin-top: 10px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="Residents Name" placeholder="Residents" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Date</button>
                                     <div class="dropdown-menu">
                                         <p style="margin-left: 15px;margin-right: 15px;margin-bottom: 0px;">From:</p><input class="form-control" type="date" style="margin-left: 10px;margin-right: 10px;width: 90%;">
@@ -49,29 +49,41 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="Residents Name" placeholder="Reporter" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="Residents Name" placeholder="Reporter" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Location</button>
                                     <div class="dropdown-menu">
-                                    {{ reports|location_options }}
+                                        {{ reports|location_options }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Type of Care</button>
                                     <div class="dropdown-menu">
                                         {{ reports|care_options }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Incident Type</button>
                                     <div class="dropdown-menu">
                                         {{ reports|incident_options }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 15px;padding-bottom: 0px;"><a class="btn btn-secondary" role="button" style="width: 50% ;">Apply</a></div>
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                                <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Report Status</button>
+                                    <div class="dropdown-menu">
+                                        <div class="form-check" style="margin-left: 10px;"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">John Smith</label></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                                <div class="d-flex justify-content-center" style="width: 100%;padding: 6px 12px;height: 100%;border-width: 2px;border-style: solid;border-radius: 4px;">
+                                    <div class="form-check" style="text-align: left;"><input class="form-check-input" type="checkbox" id="formCheck-3" style="border: 2px solid rgb(0, 0, 0);padding: 7px;"><label class="form-check-label" for="formCheck-3" style="font-size: 18px;">Display All</label></div>
+                                </div>
+                            </div>
+                            <div class="col-12" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 15px;padding-bottom: 0px;"><a class="btn btn-secondary" role="button" style="width: 50% ;">Apply</a></div>
                         </div>
                     </form>
                 </div>
@@ -88,26 +100,26 @@
             <a style="text-decoration-line: none" href="/read_report/{{ report.id }}">
             <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 0px;">
                 <div class="row">
-                    <div class="col-4" style="font-size: 18px;font-weight: bold;">
+                    <div class="col-6" style="font-size: 18px;font-weight: bold;">
                         <p>
                             {% if report.residents != "" %}Residents Name: {{ report.residents }} <br/>{% endif %}
                             {% if report.staff != "" %} Staff Name: {{ report.staff }} <br/>{% endif %}
                             {% if report.others != "" %} Others Name: {{ report.others }} <br/>{% endif %}
                         </p>
                     </div>
-                    <div class="col-8" style="font-size: 18px;font-weight: bold;">
+                    <div class="col-6" style="font-size: 18px;font-weight: bold;">
                         <p>{{ report.date_of_incident }}</p>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6">
                         <p>Reporter Name: {{ report.name_of_writer }}</p>
                     </div>
-                    <div class="col-8">
+                    <div class="col-6">
                         <p>Location: {{ report.incident_location }}</p>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6">
                         <p>Community: {{ report.community }}</p>
                     </div>
-                    <div class="col-8">
+                    <div class="col-6">
                         <p>Incident Type:
                             {% if report.near_miss %}Near Miss, {% endif %}
                             {% if report.fall %}Fall, {% endif %}
@@ -130,6 +142,9 @@
                             {% if report.death %}Death, {% endif %}
                             {% if report.other_type_of_incicent %}Other, {% endif %}
                             {% if report.staff_injury %}Staff Injury{% endif %}</p>
+                    </div>
+                    <div class="col-6">
+                        <p>Report Status: {{ report.report_status }}</p>
                     </div>
                 </div>
             </div>
