--- a/Templates/input_form.html
+++ b/Templates/input_form.html
@@ -303,12 +303,12 @@
                                 </div>
                                 <div class="col-12"><textarea class="form-control form-control-lg" name="physician_comments">{{ report.physician_comments.value }}</textarea></div>
                             </div>
-                            <div class="row" style="margin-top: 20px">
-                                <div class="col-6">
-                                  <button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;" type="submit" name="submit" value="submit">Submit</button>
+                            <div class="row d-flex justify-content-center" style="margin-top: 20px">
+                                <div class="col-6 d-flex justify-content-center">
+                                  <button class="btn btn-primary btn-lg" role="button" style="width:50%; font-family: ABeeZee, sans-serif;" type="submit" name="submit" value="submit">Submit</button>
                                 </div>
-                                <div class="col-6">
-                                  <button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;" type="submit" name="submit" value="save">Save</button>
+                                <div class="col-6 d-flex justify-content-center">
+                                  <button class="btn btn-primary btn-lg" role="button" style="width:50%; font-family: ABeeZee, sans-serif;" type="submit" name="submit" value="save" >Save</button>
                                 </div>
                             </div>
                         </div>
