Closes #109 - Update Name of Writer Fields and More
Updated Report Model to include fields for First and Last Name of the Report Writer as well as their position, and removed the name_of_writer field which the new fields replace.

Update Report Form to include checks for the new fields for a validated form.

Update all input forms with input fields for all of the fields, as well as updated the dashboard to include a formatted version of the writer's name. Also updated the date of incident line to check if a date of incident has been entered and if not the dashboard uses the automatically included submission date.

--- a/Templates/dashboard-export.html
+++ b/Templates/dashboard-export.html
@@ -113,10 +113,10 @@
                             {% if report.others != "" %} Others Name: {{ report.others }} <br/>{% endif %}</p>
                         </div>
                         <div class="col-6" style="font-size: 18px;font-weight: bold;">
-                            <p>{{ report.date_of_incident }}</p>
+                            <p>{% if report.date_of_incident is not None %}{{ report.date_of_incident }}{% else %}{{ report.report_submission_date }} {% endif %}</p>
                         </div>
                         <div class="col-6">
-                            <p>Reporter Name: {{ report.name_of_writer }}</p>
+                            <p>Reporter Name: {{ report.writer_first_name }} {{ report.writer_last_name }}, {{ report.writer_position }}</p>
                         </div>
                         <div class="col-6">
                             <p>Community: {{ report.incident_location }}</p>
