--- a/Templates/edit_report.html
+++ b/Templates/edit_report.html
@@ -81,7 +81,25 @@
                                 </div>
                             </div>
                             <p>Date and Time of Incident:</p><input class="form-control" type="datetime-local" name="date_of_incident" value="{{ report.date_of_incident|date:"Y-m-d\TH:i" }}">
-                            <p>Incident Location:</p><input class="form-control" type="text" name="incident_location" placeholder="Location" value="{{ report.incident_location }}">
+                            <p>Incident Location:</p>
+                            <div class="row">
+                                <div class="col-6 col-md-3 col-lg-3">
+                                    <div class="form-check"><input class="form-check-input" type="radio" name="incident_location" value="BA" {% if report.incident_location == "BA" %} checked {% endif %}><label class="form-check-label">Bathroom</label></div>
+                                </div>
+                                <div class="col-6 col-md-3 col-lg-3">
+                                    <div class="form-check"><input class="form-check-input" type="radio" name="incident_location" value="BE" {% if report.incident_location == "BE" %} checked {% endif %}><label class="form-check-label">Bedroom</label></div>
+                                </div>
+                                <div class="col-6 col-md-3 col-lg-3">
+                                    <div class="form-check"><input class="form-check-input" type="radio" name="incident_location" value="HA" {% if report.incident_location == "HA" %} checked {% endif %}><label class="form-check-label">Hallway</label></div>
+                                </div>
+                                <div class="col-6 col-md-3 col-lg-3">
+                                    <div class="form-check"><input class="form-check-input" type="radio" name="incident_location" value="ST" {% if report.incident_location == "ST" %} checked {% endif %}><label class="form-check-label">Stairway</label></div>
+                                </div>
+                                <div class="col-12 col-lg-3">
+                                    <div class="form-check"><input class="form-check-input" type="radio" name="incident_location" value="OT" {% if report.incident_location == "OT" %} checked {% endif %}><label class="form-check-label">Other (Specify):</label></div>
+                                </div>
+                                <div class="col-12"><textarea class="form-control" name="incident_location_other">{{ report.incident_location_other }}</textarea></div>
+                            </div>
                         </div>
                         <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 20px;margin-top: 15px;margin-bottom: 15px;">
                             <div class="row">
