Closes #111 - Implemented Min and Max Values for Vitan Signs
Updated Report Model to use PositiveIntegerFields to ensure that values are either zero or positive. As well added a MaxValueValidator to each PositiveIntegerField.  Also changed the field for BP (Blood Pressure) to be a CharField with a Regex expression that ensures that the correct format is always used.

Updated Report Form to check the BP field to see if the value entered is over 500 for either systolic or diastolic blood pressure.

Updated input forms to change the BP input from a number to a text field.

--- a/Templates/input_form.html
+++ b/Templates/input_form.html
@@ -231,7 +231,7 @@
                                 <div class="col-4 col-sm-2">
                                     <p class="text-end">BP</p>
                                 </div>
-                                <div class="col-8 col-sm-4"><input class="form-control" type="number" name="BP" value="{{ report.BP.value }}"></div>
+                                <div class="col-8 col-sm-4"><input class="form-control" type="text" name="BP" value="{{ report.BP.value }}"></div>
                                 <div class="col-4 col-sm-2">
                                     <p class="text-end">Sp02</p>
                                 </div>
