--- a/Templates/read_only_report.html
+++ b/Templates/read_only_report.html
@@ -229,7 +229,7 @@
                             <div class="col-4 col-sm-2">
                                 <p class="text-end">BP</p>
                             </div>
-                            <div class="col-8 col-sm-4"><input class="form-control" type="number" name="BP" value="{{ report.BP }}" disabled></div>
+                            <div class="col-8 col-sm-4"><input class="form-control" type="text" name="BP" value="{{ report.BP }}" disabled></div>
                             <div class="col-4 col-sm-2">
                                 <p class="text-end">Sp02</p>
                             </div>
