--- a/Templates/input_form.html
+++ b/Templates/input_form.html
@@ -242,21 +242,7 @@
                                 <div class="col-8 col-sm-4"><input class="form-control" type="number" name="blood_sugar" value="{{ report.blood_sugar.value }}"></div>
                                 <div class="col-12">
                                     <p>Neurovital Signs:</p>
-                                </div>
-                                <div class="col-4 col-lg-2">
-                                    <p class="text-end">Pupil Size L</p>
-                                </div>
-                                <div class="col-8 col-lg-2"><input class="form-control" type="number" name="pupil_size_L" value="{{ report.pupil_size_L.value }}"></div>
-                                <div class="col-4 col-lg-2">
-                                    <p class="text-end">Pupil Size R</p>
-                                </div>
-                                <div class="col-8 col-lg-2"><input class="form-control" type="number" name="pupil_size_R" value="{{ report.pupil_size_R.value }}"></div>
-                                <div class="col-4 col-lg-2">
-                                    <p class="text-end">CS</p>
-                                </div>
-                                <div class="col-8 col-lg-2"><input class="form-control" type="number" name="CS"  value="{{ report.CS.value }}"></div>
-                                <div class="col-12">
-                                    <p class="text-start">(Complete NVS Record)</p>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" name="NVS_report_completed" value="True" {% if report.NVS_report_completed.value == True %} checked {% endif %}><label class="form-check-label">NVS Record Completed</label></div>
                                 </div>
                             </div>
                         </div>
