Dashboard Func. Stub
AutoFocus on username field
Dashboard Functionality Stub and URL Endpoint

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -41,7 +41,7 @@
                             <div class="col-12 text-center" style="padding: 10px;padding-bottom: 5px;padding-top: 5px;margin-bottom: 20px;">
                                 <h1 style="font-family: ABeeZee, sans-serif;font-size: 45px;color: var(--bs-gray-700);"><i class="icon-lock" style="font-size: 75px;color: var(--bs-gray-700);"></i><br>Login<br></h1>
                             </div>
-                            <div class="col-12" style="padding: 10px;padding-bottom: 5px;"><input class="form-control" type="text" name="Username" placeholder="Username" style="font-size: 20px;font-family: ABeeZee, sans-serif;border-radius: 10px;"></div>
+                            <div class="col-12" style="padding: 10px;padding-bottom: 5px;"><input class="form-control" type="text" name="Username" placeholder="Username" style="font-size: 20px;font-family: ABeeZee, sans-serif;border-radius: 10px;" autofocus></div>
                             <div class="col-12" style="padding: 10px;padding-top: 5px;"><input class="form-control" type="password" name="Password" placeholder="Password" style="font-size: 20px;font-family: ABeeZee, sans-serif;border-radius: 10px;"></div>
                             <div class="col-12 text-center" style="padding: 10px;margin-top: 20px;"><button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;">Login&nbsp;<i class="fa fa-chevron-right"></i></button></div>
                         </div>
