Implemented prototype filters
Bug with display_all_toggle

--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -83,10 +83,12 @@
                             </div>
                             <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
                                 <div class="d-flex justify-content-center" style="width: 100%;padding: 6px 12px;height: 100%;border-width: 2px;border-style: solid;border-radius: 4px;">
-                                    <div class="form-check" style="text-align: left;"><input class="form-check-input" type="checkbox" id="formCheck-3" name="display_all_toggle" style="border: 2px solid rgb(0, 0, 0);padding: 7px;"><label class="form-check-label" for="formCheck-3" style="font-size: 18px;">Display All</label></div>
+                                        <input class="form-check-input" type="checkbox" id="formCheck-3" name="display_all_toggle" style="text-align: left;border: 2px solid rgb(0, 0, 0);padding: 7px;">
+                                            <label class="form-check-label" for="formCheck-3" style="font-size: 18px;">&nbsp;Display All</label>
+                                        </input>
                                 </div>
                             </div>
-                            <div class="col-12" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 15px;padding-bottom: 0px;"><button class="btn btn-secondary" role="button" type="submit" name="submit" value="apply_filters" style="width: 50% ;">Apply</button></div>
+                            <div class="col-12" style="padding: 15px 10px 0px;"><button class="btn btn-secondary" role="button" type="submit" name="submit" value="apply_filters" style="width: 50% ;">Apply</button></div>
                         </div>
                     </form>
                 </div>
