--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -42,6 +42,7 @@
             <div class="text-center"><a class="btn btn-secondary" data-bs-toggle="collapse" aria-expanded="true" aria-controls="collapse-2" href="#collapse-2" role="button" style="margin-bottom: 10px;width: 80%;font-size: 18px;"><i class="fa fa-filter"></i>&nbsp;Filters</a>
                 <div class="collapse show" id="collapse-2">
                     <form action="{%  url 'dashboard_functionality' %}" method="GET">
+                        {% csrf_token %}
                         <div class="row d-flex justify-content-center" style="margin-top: 10px;">
                             <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="residents_name" placeholder="Residents" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
                             <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
