Bug and quality of life fixes for demonstration

--- a/Templates/physician_edit_report.html
+++ b/Templates/physician_edit_report.html
@@ -42,7 +42,7 @@
                     </div>
                 {% endfor %}
             {% endif %}
-            <form class="col">
+            <div class="col">
                 <div>
                     <form action="/edit_report/{{ report.id }}" method="POST">
                         {% csrf_token %}
