--- a/Templates/read_only_report.html
+++ b/Templates/read_only_report.html
@@ -310,6 +310,12 @@
                         </div>
                     </div>
                     <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
+                        <div class="row">
+                                <p>Physician or Provider Comments:</p>
+                            <div class="col-12"><textarea class="form-control form-control-lg" name="physician_comments" disabled>{{ report.physician_comments }}</textarea></div>
+                        </div>
+                    </div>
+                    <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
                         <div class="row" style="margin-top: 20px">
                             <div class="col-12">
                                 <p>Automatically Generated Information</p>
@@ -338,16 +344,11 @@
                             </div>
                         </div>
                     </div>
-                    <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
-                        <div class="row">
-                                <p>Physician or Provider Comments:</p>
-                            </div>
-                            <div class="col-12"><textarea class="form-control form-control-lg" name="physician_comments" disabled>{{ report.physician_comments }}</textarea></div>
-                        </div>
-                    </div>
+
+
                     <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
                         <div class="row" style="margin-top: 20px">
-                            {% if report.report_status == "CO" %}
+                            {% if report.report_status != "CO" %}
                             <div class="col-4">
                                 <a href="/edit_report/{{ report.id }}">
                                     <button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;">Edit</button>
